<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_bg"
    android:orientation="vertical">

    <!--用于填充(等分)剩余空间-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5" />

    <!--登录界面图标-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/logo"
            android:id="@+id/imageView" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:text="@string/title"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:text="@string/app_second_title"/>
    </LinearLayout>

    <!--用于填充(等分)剩余空间-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3" />

    <!--账号输入布局-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <!--账号图标-->
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/id" />

        <!--账号输入框-->
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/et_login_username"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:focusableInTouchMode="true"
            android:hint="@string/login_user"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLines="1"
            android:nextFocusForward="@+id/et_login_passwd"
            app:met_baseColor="@color/black"
            app:met_clearButton="true"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelText="@string/login_user"
            app:met_floatingLabelTextSize="15sp"
            app:met_primaryColor="@color/black" />

    </LinearLayout>

    <!--密码输入布局-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <!--密码图标-->
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/password" />

        <!--密码输入框-->
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/et_login_passwd"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:focusableInTouchMode="true"
            android:hint="@string/login_key"
            android:inputType="textPassword"
            android:maxLines="1"
            app:met_baseColor="@color/black"
            app:met_clearButton="true"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelText="@string/login_key"
            app:met_floatingLabelTextSize="15sp"
            app:met_primaryColor="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <CheckBox
            android:id="@+id/cb_login_remember_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_remember_pwd"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:button="@null"
            android:drawableLeft="@drawable/selector_cb_common"
            android:drawablePadding="8dp"
            android:paddingLeft="0dp"/>

        <CheckBox
            android:id="@+id/cb_login_auto_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp"
            android:text="@string/login_auto_login"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:button="@null"
            android:drawableLeft="@drawable/selector_cb_common"
            android:drawablePadding="8dp"
            android:paddingLeft="0dp"/>

    </LinearLayout>

    <!--登录按钮-->
    <Button
        android:id="@+id/btn_login_login"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/selector_btn_login_login"
        android:text="@string/login_login"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <!--用于填充(等分)剩余空间-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>